--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       
       <div class='row text-center separator-small'>        
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
-          <a href='http://opac.ulpgc.es' class='logo'><img src='images/biblioteca.png' alt='Biblioteca ULPGC' /></a>
+          <a href='http://www.github.com' class='logo'><img src='images/github.png' alt='GitHub' /></a>
         </div>
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
-          <a href='http://correo.ulpgc.es' class='logo'><img src='images/correo.png' alt='Correo ULPGC' /></a>
+          <a href='http://www.bitbucket.org' class='logo'><img src='images/bitbucket.png' alt='Bitbucket' /></a>
         </div>
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
           <a href='http://www.w3schools.com' class='logo'><img src='images/w3schools.png' alt='W3 Schools' /></a>
@@ -57,7 +57,7 @@
       
       <div class='row text-center separator-small'>        
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
-          <a href='http://9gag.com/trending' class='logo'><img src='images/9gag.png' alt='9GAG' /></a>
+          <a href='http://www.siliconvalley.com' class='logo'><img src='images/siliconvalley.png' alt='Silicon Valley News' /></a>
         </div>
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
           <a href='http://player.streamtheworld.com/liveplayer.php?CALLSIGN=ARNCITY' class='logo'><img src='images/cityfm.png' alt='CityFM' /></a>
