Changes some links in the menu

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <link href='css/bootstrap.css' rel='stylesheet'>
     <link href='css/style.css' rel='stylesheet'>
-    <link rel='icon' href='favicon.ico' type='image/x-icon'> 
+    <link rel='icon' href='favicon.ico' type='image/x-icon'>
     <script src='js/init_background.js'></script>
     <title>Homepage</title>
   </head>
@@ -45,7 +45,7 @@
           <a href='http://www.github.com' class='logo'><img src='images/github.png' alt='GitHub' /></a>
         </div>
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
-          <a href='http://www.bitbucket.org' class='logo'><img src='images/bitbucket.png' alt='Bitbucket' /></a>
+          <a href='http://www.coursera.org' class='logo'><img src='images/coursera.png' alt='Coursera' /></a>
         </div>
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
           <a href='http://www.w3schools.com' class='logo'><img src='images/w3schools.png' alt='W3 Schools' /></a>
@@ -57,7 +57,7 @@
       
       <div class='row text-center separator-small'>        
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
-          <a href='http://www.siliconvalley.com' class='logo'><img src='images/siliconvalley.png' alt='Silicon Valley News' /></a>
+          <a href='http://correo.ulpgc.es' class='logo'><img src='images/correo.png' alt='Correo ULPGC' /></a>
         </div>
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
           <a href='http://player.streamtheworld.com/liveplayer.php?CALLSIGN=ARNCITY' class='logo'><img src='images/cityfm.png' alt='CityFM' /></a>
