Changes some links and deletes unused images

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
           <a href='http://www.youtube.com' class='logo'><img src='images/youtube.png' alt='YouTube' /></a>
         </div>
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
-          <a href='http://www.ulpgc.es' class='logo'><img src='images/ulpgc.png' alt='ULPGC' /></a>
+          <a href='http://www.9gag.com/trending' class='logo'><img src='images/9gag.png' alt='9GAG' /></a>
         </div>        
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
           <a href='http://www.google.com' class='logo'><img src='images/google.png' alt='Google' /></a>
         </div>
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
-          <a href='http://www.seriespepito.com' class='logo'><img src='images/seriespepito.png' alt='SeriesPepito' /></a>
+          <a href='http://www.seriesdanko.com' class='logo'><img src='images/seriesyonkis.png' alt='SeriesYonkis' /></a>
         </div>
       </div>
       
@@ -57,10 +57,10 @@
       
       <div class='row text-center separator-small'>        
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
-          <a href='http://correo.ulpgc.es' class='logo'><img src='images/correo.png' alt='Correo ULPGC' /></a>
+          <a href='http://www2.rtvc.es/television/Directo.aspx' class='logo'><img src='images/tvcan.png' alt='TV Canaria On-Line' /></a>
         </div>
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
-          <a href='http://player.streamtheworld.com/liveplayer.php?CALLSIGN=ARNCITY' class='logo'><img src='images/cityfm.png' alt='CityFM' /></a>
+          <a href='http://www.rtve.es/directo/la-1/' class='logo'><img src='images/rtve.png' alt='rtve' /></a>
         </div>
         <div class='col-md-3 col-sm-6 col-xs-12 fit-icon'>
           <a href='http://www.facebook.com' class='logo'><img src='images/facebook.png' alt='FaceBook' /></a>
