dropbox link added
adds dropbox link and favicon

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <a href='https://goldprice.org/'><span class='badge badge-dark'><img src='https://goldprice.org/favicon.ico' />&nbsp;GOLD</span></a>
             </div>        
             <div class='col-md-3 col-sm-6 col-xs-12'>
-              <a href='#'><span class='badge badge-faded'><img src='favicon.ico' />&nbsp;BLNK</span></a>
+              <a href='https://www.dropbox.com/'><span class='badge badge-dark'><img src='https://cfl.dropboxstatic.com/static/images/favicon-vflUeLeeY.ico' />&nbsp;DBOX</span></a>
             </div>
 		  </div>     
         </div>
