--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <a href='https://particulares.bancosantander.es/login/'><span class='badge'><img src='https://particulares.bancosantander.es/login/assets/image/icons/favicon-32x32.png' />&nbsp;BANK</span></a>
             </div>        
             <div class='col-md-3 col-sm-6 col-xs-12'>
-              <a href='https://www.pluralsight.com'><span class='badge'><img src='https://www.pluralsight.com/etc/clientlibs/pluralsight/main/images/favicons/favicon.ico' />&nbsp;PLST</span></a>
+              <a href='https://app.pluralsight.com/id?'><span class='badge'><img src='https://www.pluralsight.com/etc/clientlibs/pluralsight/main/images/favicons/favicon.ico' />&nbsp;PLST</span></a>
             </div>
 		  </div>     
         </div>
@@ -135,7 +135,7 @@
               <a href='https://translate.google.com'><span class='badge badge-primary'><img src='https://translate.google.com/favicon.ico' />&nbsp;GTRA</span></a>
             </div>        
             <div class='col-md-3 col-sm-6 col-xs-12'>
-              <a href='#'><span class='badge badge-faded'><img src='favicon.ico' />&nbsp;BLNK</span></a>
+              <a href='https://www.wordreference.com/dees/'><span class='badge badge-primary'><img src='https://www.wordreference.com/favicons/favicon-32x32.png' />&nbsp;WORD</span></a>
             </div>
 		  </div>          
         </div>
